--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@ permalink: /404.html
 ---
 
 <div class="text-center">
-  <h1>Whoops, this page doesn't exist.</h1>
-  <h1>Move along. (404 error)</h1>
+  <h1>Ooops ! Aradığın sayfa mevcut değil.</h1>
+  <h1>(404 Error !)</h1>
   <br/>
 
-  <img src="{{ 'img/404-southpark.jpg' | relative_url }}" />
+  <img src="{{ 'img/404.gif' | relative_url }}" />
 </div>
